--- a/server/views/Inicio/inicio.ejs
+++ b/server/views/Inicio/inicio.ejs
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cuora Neo</title>
-    <link rel=icon href='../../public/images/imgWaitSpinner.gif' sizes="32x32" type="image/ico">
-    <link rel="stylesheet" type="text/css" href="/css/inicio.css">
-</head>
+<%- include("../templates/head", {tituloWeb: "Cuora Neo Web"}) %> 
 
 <body>
 <div class="login">
