--- a/server/views/Inicio/inicio.ejs
+++ b/server/views/Inicio/inicio.ejs
@@ -46,6 +46,9 @@
                 <button type='submit' class='btn-form' onclick="PlayAudio()">ACEPTAR</button>
             </div>
         </form>
+        <div class='container-version'>
+            <h6>versión 6.3.98.736</h6>
+        </div>
     </div>
     <audio id="player" src="./images/Bonjour.mp3" autoplay></audio>
     <script>
