--- a/server/views/templates/head.ejs
+++ b/server/views/templates/head.ejs
@@ -1,6 +1,6 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >    
-    <title><%=tituloWeb%></title>
-    <link rel="stylesheet" type="text/css" href="/css/inicio.css">
+    <title><%=datahead.titulo%></title>
+    <link rel="stylesheet" type="text/css" href=<%=datahead.css%>>
 </head>
