--- a/server/views/Inicio/inicio.ejs
+++ b/server/views/Inicio/inicio.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<%- include('../templates/head', {datahead: {titulo: 'Cuora Neo Web', css: '/css/inicio.css'}}) %> 
+<%- include('../templates/head', {datahead: {titulo: __('Cuora Neo Web'), css: '/css/inicio.css'}}) %> 
 
 <body>
 <div class='login'>
