--- a/server/views/Abm/menu.ejs
+++ b/server/views/Abm/menu.ejs
@@ -4,7 +4,32 @@
 <%- include('../templates/head', {datahead: {titulo: 'Menu' , css: '/css/menu.css' }}) %>
 
     <body>
-        <h1>Este es el menu!</h1>
+        <div class="menu-container">
+            <div class="card-container">
+                <a href="/" class="anchor-button">
+                    <img src="/images/icons/assistPrice.png" class="icon">
+                    <h5>Asistente de precios</h5>
+                </a>
+            </div>
+            <div class="card-container">
+                <a href="/" class="anchor-button">
+                    <img src="/images/icons/altaBaja.png" class="icon">
+                    <h5>Altas y bajas</h5>
+                </a>
+            </div>
+            <div class="card-container">
+                <a href="/" class="anchor-button">
+                    <img src="/images/icons/reports.png" class="icon">
+                    <h5>Reportes</h5>
+                </a>
+            </div>
+            <div class="card-container">
+                <a href="/" class="anchor-button">
+                    <img src="/images/icons/settings53.png" class="icon">
+                    <h5>Configuración</h5>
+                </a>
+            </div>
+        </div>
     </body>
 
 </html>
