--- a/server/views/Inicio/inicio.ejs
+++ b/server/views/Inicio/inicio.ejs
@@ -24,7 +24,7 @@
                     <% if (data) { %>
                         <% data.usuarios.map(e => { %>
                             <% if (e.username === 'Supervisor') { %>
-                                <option class='ptionUser' selected>
+                                <option class='optionUser' selected>
                                     <%= e.username %>
                                 </option> 
                             <% } else { %>
