--- a/server/public/css/menu.css
+++ b/server/public/css/menu.css
@@ -5,10 +5,10 @@ body{
     margin: 0;
     padding: 0;
     background-image: url('../../../images/bg-verificador-precios-V4_edicion1.png');
-    fill-opacity: 0.5;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    filter: sepia(1);
 }
 
 .menu-container{
@@ -17,10 +17,11 @@ body{
     flex-flow: wrap;
     justify-content: flex-start;
     position: absolute;
-    background-color: rgba(11, 70, 83, 0.6);
     width: 100%;
     height: 100vh;
-    filter: sepia(1);
+    background-color: rgba(96, 68, 0, 0.45);
+    filter: drop-shadow(10px 10px 10px rgba(0, 0, 0, 0.5));
+
 }
 
 .card-container{
@@ -33,18 +34,18 @@ body{
     position: relative;
     width: 48%;
     height: 45%;
-    background-color: #0ecc2e0d;
-    border-style: hidden;
-    border-radius: 0.3em;
-    box-shadow: 1px 1px 7px #9e9e9e;
+    background-color: rgba(255, 255, 255, 0.541);
+    border-radius: 0.5em;
+    box-shadow: 0px 0px 10px 1px rgb(0, 0, 0);
     margin: 1%;
+    filter: invert(1);
 }
 
 .card-container:hover {
     color: #b5f4ff;
-    box-shadow: rgb(11, 29, 35) 6px 7px 8px, rgba(45, 35, 66, 0.4) 0 7px 13px -2px, rgb(21, 56, 66) 0 -2px 0 inset;
+    box-shadow: rgb(12, 34, 42) 6px 7px 8px, rgba(3, 11, 34, 0.6) 0 7px 13px -2px, rgb(131, 131, 131) 0 -2px 0 inset;
     transform: translateY(-1.5px) translateX(-1.5px);
-    filter: blur(1px);
+    filter: invert(0.1);
 }
 
 .card-container a{
@@ -55,7 +56,7 @@ body{
     justify-content: center;
     justify-items: center;
     color: rgb(0, 0, 0);
-    font-size: 1.2rem;
+    font-size: 1.8rem;
     text-decoration: none;
     width: 100%;
     height: 100%;
