--- a/server/public/css/error.css
+++ b/server/public/css/error.css
@@ -1,7 +1,7 @@
 body{
     margin: 0;
     padding: 0;
-    background-color: rgb(10, 72, 83);
+    background-color: rgba(10, 78, 83, 0.86);
     align-items: center;    
 }
 
@@ -36,13 +36,13 @@ h3{
 
 .btn-form {
     color: aliceblue;
-    background-color: rgba(36 226 13 / 8%);
+    background-color: rgba(79, 173, 205, 0.45);
     padding: 8px 8px;
     align-items: center;
     appearance: none;
     border-radius: 4px;
     border-width: 0;
-    box-shadow: rgba(90, 89, 93, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #4d4f57 0 0 0 inset;
+    box-shadow: rgba(90, 89, 93, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px 4px, #000000 0px 0px 1px inset;
     box-sizing: border-box;
     cursor: pointer;
     display: inline-flex;
@@ -61,7 +61,7 @@ h3{
 
 .btn-form:hover {
     color: #b5f4ff;
-    box-shadow: rgb(66, 173, 206) 4px 2px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -2px, rgb(66, 173, 206) 0 -2px 0 inset;
+    box-shadow: rgb(155, 204, 219) 4px 2px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -2px, rgb(50, 146, 175) 0px 0px 3px inset;
     transform: translateY(-3px) translateX(-2px);
 }
 
