--- a/server/views/Inicio/inicio.ejs
+++ b/server/views/Inicio/inicio.ejs
@@ -7,7 +7,7 @@
 <div class='login'>
     <div class='container-login'>
         <h3><%=__('Bienvenido')%></h3>
-        <form class='container-form-login' method='POST' action='/api/abmenu/'>
+        <form class='container-form-login' method='POST' action='/api/menu/'>
             <!--
             <div class="container-input-idioma">
                 <label for="idioma">Idioma</label>
