--- a/server/views/Menu/menu.ejs
+++ b/server/views/Menu/menu.ejs
@@ -6,13 +6,13 @@
     <body>
         <div class="menu-container">
             <div class="card-container">
-                <a href="/" class="anchor-button">
+                <a href="/api/sigin" class="anchor-button">
                     <img src="/images/icons/assistPrice.png" class="icon">
                     <h5>Asistente de precios</h5>
                 </a>
             </div>
             <div class="card-container">
-                <a href="/" class="anchor-button">
+                <a href="/api/menu/abm" class="anchor-button">
                     <img src="/images/icons/altaBaja.png" class="icon">
                     <h5>Altas y bajas</h5>
                 </a>
