--- a/server/views/ABM/abm.ejs
+++ b/server/views/ABM/abm.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<%- include('../templates/head', {datahead: {titulo: 'ABM' , css: '/css/abm.css' }}) %>
+<%- include('../templates/head', {datahead: {titulo: 'ABM' , css: '/css/ABM/abm.css' }}) %>
 
     <body>
         <div class="menu-container">
