--- a/server/public/css/Error/error.css
+++ b/server/public/css/Error/error.css
@@ -28,7 +28,7 @@ h3{
 .image{
     width: 30%;
     height: 30vh;
-    background-image: url('../images/ErrorPage.png');    
+    background-image: url('/images/ErrorPage.png');    
     background-size: contain;
     background-position: center;
     background-repeat: no-repeat;
