--- a/server/views/Error/error.ejs
+++ b/server/views/Error/error.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<%- include('../templates/head', {datahead: {titulo: 'Error!' , css: '/css/error.css' }}) %>
+<%- include('../templates/head', {datahead: {titulo: 'Error!' , css: '/css/Error/error.css' }}) %>
 
     <body>
         <div class="containerError">            
