--- a/server/views/Menu/menu.ejs
+++ b/server/views/Menu/menu.ejs
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 
-<%- include('../templates/head', {datahead: {titulo: 'Menu' , css: '/css/menu.css' }}) %>
+<%- include('../templates/head', {datahead: {titulo: 'Menu' , css: '/css/Menu/menu.css' }}) %>
 
     <body>
         <div class="menu-container">
@@ -18,7 +18,7 @@
                 </a>
             </div>
             <div class="card-container">
-                <a href="/" class="anchor-button">
+                <a href="/api/menu/reports" class="anchor-button">
                     <img src="/images/icons/reports.png" class="icon">
                     <h5>Reportes</h5>
                 </a>
