--- a/server/views/Menu/menu.ejs
+++ b/server/views/Menu/menu.ejs
@@ -24,7 +24,7 @@
                 </a>
             </div>
             <div class="card-container">
-                <a href="/" class="anchor-button">
+                <a href="/api/menu/settings" class="anchor-button">
                     <img src="/images/icons/settings53.png" class="icon">
                     <h5>Configuración</h5>
                 </a>
