--- a/server/views/templates/head.ejs
+++ b/server/views/templates/head.ejs
@@ -2,5 +2,5 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" >    
     <title><%=datahead.titulo%></title>
-    <link rel="stylesheet" type="text/css" href=<%=datahead.css%>>
+    <link rel="stylesheet" content-type="text/css" href=<%=datahead.css%>>
 </head>
