--- a/server/views/Menu/menu.ejs
+++ b/server/views/Menu/menu.ejs
@@ -6,7 +6,7 @@
     <body>
         <div class="menu-container">
             <div class="card-container">
-                <a href="/api/sigin" class="anchor-button">
+                <a href="/api/menu/prices/search" class="anchor-button">
                     <img src="/images/icons/assistPrice.png" class="icon">
                     <h5>Asistente de precios</h5>
                 </a>
