--- a/server/views/Price/price.ejs
+++ b/server/views/Price/price.ejs
@@ -27,8 +27,8 @@
                         <input type="text" id="hideField" name='priceList_id' value=""/>
                     </div>
                     <div class='container-input'>
-                        <label for='product'>Producto</label>
-                        <input type="text" id='product' name='product' class='input-form-busqueda' autoComplete='off'/>
+                        <label for='product'>Nombre Producto</label>
+                        <input type="text" id='product' name='product' class='input-form-busqueda' autoComplete='off' value=''/>
                     </div>
                     <br />
                     <div class='container-btn-form'>
