--- a/server/public/css/Price/table.css
+++ b/server/public/css/Price/table.css
@@ -30,6 +30,35 @@ body{
     top: -6vh;
 }
 
+.container-btns{
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+    width: 100%;
+}
+
+.container-btns .btn{
+    display: inline;
+    position: relative;
+    min-width:fit-content;
+    width: 50%;
+    height: 6vh;
+    background-color: rgba(16, 112, 136, 0.753);
+    border: none;
+    outline: none;
+}
+
+.btn:hover{
+    background-color: rgba(10, 60, 73, 0.753);
+}
+
+.btn a{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 1rem;
+    padding: 3vh 18vw;
+}
+
 .imgWait {
     position: relative;
     height: auto;
@@ -39,7 +68,7 @@ body{
 }
 
 .container-table table {
-    background-color: rgba(220, 220, 220, 0.3);
+    background-color: rgba(220, 220, 220, 0.4);
     text-align: left;
     border: 1.2px solid #1C6EA4;
     border-collapse: collapse;
@@ -47,15 +76,17 @@ body{
 }
 
 .container-table table thead th {
-    font-size: 17px;
+    font-size: 1rem;
     font-weight: bold;
     color: #ffffff;
     border-left: 2px solid #8a8a8a;
     white-space: nowrap;
     padding: 10px 10px;
-    background: linear-gradient(to bottom, rgb(16, 112, 136) 50%, rgba(45, 123, 169, 0.42) 86%, #67b7dff3 100%);
+    background: linear-gradient(to bottom, rgb(16, 112, 136) 55%, rgba(45, 123, 169, 0.42) 86%, #67b7df 100%);
     position: sticky;
+    opacity: 0.9;
     top: 0;
+    z-index: 1;
 }
 
 .container-table table thead th:first-child {
