--- a/server/views/Price/table.ejs
+++ b/server/views/Price/table.ejs
@@ -18,45 +18,57 @@
                     </thead>
                     <tbody>
                         <% if (data) { %>
-                            <% data.priceList.map((e)=>{ %>
+                            <% for (var i = 0; i <= data.product.pid.length;  i++ ) { %>                            
                                 <tr>
-                                    <form method="POST" action="/api/menu/prices/tableChanged">
-                                        <td><input class="inputDisable" type="text" name="id" value="<%= e.id %>" readonly></td>
-                                        <td><input class="inputDisable" type="text" name="name" value="<%= e.name %>" readonly></td>
-                                        <td style="display: none"><input class="inputDisable" type="text" name="listprice" value="<%= e.listprice %>" readonly></td>
-                                        <td><input class="inputPrice" type="number" name="newPrice" value="<%= e.price %>" onclick="this.value=''" onchange="this.form.submit()"/></td> 
+                                    <form method="POST" id="newprice" action="/api/menu/prices/updateProductPrice">                                    
+                                        <td><input class="inputDisable" type="text" name="id" value="<%= data.product.pid[i] %>" readonly></td>
+                                        <td><input class="inputDisable" type="text" name="name" value="<%= data.product.pname[i] %>" readonly></td>
+                                        <td><input class="inputPrice" type="number" name="newPrice" value="<%= data.product.pprice[i] %>" onclick="this.value=''" onchange="this.form.submit()"/></td>                                    
                                     </form>                                
                                 </tr>
-                            <% }); %>
+                            <% } %>                            
                         <% } else { %>
                                 <tr>
-                                    <th colspan="3">No_hay_registros</th>                                            
+                                    <td colspan="3">No_hay_registros</td>                                            
                                 </tr>
                         <% } %>
                     </tbody>
                 </table>                                                    
             </div>
-            <form class="form-pagination" action="/api/menu/prices/tableChanged" method="post">
+            <form class="form-pagination" action="/api/menu/prices/pagination" method="post">
                 <div class="page-controll">
                     <h4>Mostrando página&nbsp</h4>
-                    <input type="number" id="inputPage" placeholder="<%=1%>">
-                    <h4> de <%=15%></h4>
+                    <input type="number" id="inputPage" placeholder="<%=data.page.pagActual%>" name="inputPage" value="<%=data.page.pagActual%>" onchange="this.form.submit()">
+                    <h4> de <%=data.page.totalPaginas%></h4>
                 </div>
                 <div class="page-controll">
-                    <input class="btn-pagination" type="button" id="first" onclick="setPage('first')" value="<%=__('| <')%>" >
-                    <input class="btn-pagination" type="button" id="previous" onclick="setPage('previous')" value="<%=__('<<')%>" >
-                    <input class="btn-pagination" type="button" id="next" onclick="setPage('next')" value="<%=__('>>')%>" >
-                    <input class="btn-pagination" type="button" id="last" onclick="setPage('last')" value="<%=__('> |')%>" >
+                    <input class="btn-pagination" type="button" id="first" onclick="setPage(event)" value="<%=__('| <')%>" >
+                    <input class="btn-pagination" type="button" id="previous" onclick="setPage(event)" value="<%=__('<<')%>" >
+                    <input class="btn-pagination" type="button" id="next" onclick="setPage(event)" value="<%=__('>>')%>" >
+                    <input class="btn-pagination" type="button" id="last" onclick="setPage(event)" value="<%=__('> |')%>" >
                 </div>
                 <div class="page-controll">
-                    <h4><%=500%> a <%=600%> registros de <%=2000%></h4>
+                    <h4><%=data.page.forMinimo%> a <%=data.page.forMaximo%> registros de <%=data.page.regTotal%></h4>
                 </div>
             </form>
-        </div>
-        
+        </div>        
         <script>
-            function setPage(option) {
-                console.log('Opcion: '+option);
+            function setPage(e) {
+                console.log('Opcion: '+e.target.id);
+                var inputPage = parseInt(document.getElementById('inputPage').value);
+                
+                if (e.target.id == 'first'){
+                    document.getElementById('inputPage').value = 1;
+                } 
+                if (e.target.id == 'previous'){
+                    document.getElementById('inputPage').value = inputPage -1;
+                }
+                if (e.target.id == 'next'){
+                    document.getElementById('inputPage').value = inputPage +1;
+                }
+                if (e.target.id == 'last'){
+                    document.getElementById('inputPage').value = 15;
+                }                 
             }
         </script>        
     </body>
