--- a/server/public/css/Price/table.css
+++ b/server/public/css/Price/table.css
@@ -28,6 +28,7 @@ body{
     max-width: 92%;
     overflow: auto;
     top: 0vh;
+    font-family: sans-serif;
 }
 
 .container-btns{
@@ -125,6 +126,7 @@ table td, table th {
     color: black;
     background-color: rgba(77, 79, 87, 0);
     border: none;
+    width: -webkit-fill-available;
 }
 
 .inputPrice{
@@ -163,6 +165,7 @@ table td, table th {
     justify-content: space-between;
     align-items: center;
     color: #ffffff;
+    font-family: sans-serif;
 }
 
 .page-controll>h4 {
@@ -174,14 +177,13 @@ table td, table th {
 #inputPage {
     display: inline-block;
     position: relative;
-    width: 5vw;
+    width: 3.5em;
     text-align: center;
-    padding: 0%;
-    margin: 0%;
+    padding: 2px 1px;
+    margin: 1px 0px;
     outline: none;
     border: none;
     background-color: rgba(0, 0, 0, 0.151);
-    text-align: end;
     color: #ffffff;
     font-weight: bold;
     font-size: 1rem;   
